Set master as default branch

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,7 +1,7 @@
 --- # BushSlicer framework configuration options
 global:
   git_repo_url: https://github.com/openshift/BushSlicer
-  git_repo_default_branch: v3
+  git_repo_default_branch: master
 
   debug_in_after_hook: false
   debug_in_after_hook_always: false
