--- a/tools/jenkins/slaves/Dockerfile.centos
+++ b/tools/jenkins/slaves/Dockerfile.centos
@@ -11,6 +11,8 @@ RUN [ -d $HOME/bushslicer/private/config/ca ] && \
     cp -v *.pem /etc/pki/ca-trust/source/anchors/ && \
     update-ca-trust extract || \
     exit 1 ) || :
+# Remove any instance of the private repository
+RUN rm -rf $HOME/bushslicer/private*
 
 RUN set -x && \
     SCL_BASE_PKGS="centos-release-scl scl-utils-build" && \
@@ -40,7 +42,7 @@ RUN scl enable rh-ror50 $HOME/bushslicer/tools/hack_bundle.rb
 
 RUN rpm -qa && \
     yum clean all -y && \
-    rm -rf $HOME/bushslicer /var/cache/yum /tmp/*
+    /var/cache/yum /tmp/*
 
 RUN dbus-uuidgen > /etc/machine-id # e.g. needed for firefox
 RUN chown -R 1001:0 $HOME && chmod -R g+rw $HOME /etc/machine-id
@@ -53,6 +55,9 @@ RUN chown -R 1001:0 $HOME && chmod -R g+rw $HOME /etc/machine-id
 RUN echo -e '#!/bin/bash\nexec "$@"' > /usr/local/bin/sudo && chmod 755 /usr/local/bin/sudo
 
 USER 1001
+
+# Start in the bushslicer top level directory to run containerized bushslicer tests
+WORKDIR $HOME/bushslicer
 
 # we need ruby and some gems from ror
 ENTRYPOINT ["/usr/bin/scl", "enable", "rh-git29", "rh-ror50", "--", "/usr/local/bin/run-jnlp-client"]
