--- a/tools/jenkins/slaves/Dockerfile.centos
+++ b/tools/jenkins/slaves/Dockerfile.centos
@@ -38,10 +38,9 @@ RUN scl enable rh-ror50 $HOME/bushslicer/tools/hack_bundle.rb
 #   security concern because of exposing VPN details
 # RUN sed -i -e 's/^\s\+curl\s/  curl -Sk /' /usr/local/bin/run-jnlp-client
 
-# Cleanup and remove any instance of the private repository
 RUN rpm -qa && \
     yum clean all -y && \
-    rm -rf /var/cache/yum /tmp/* $HOME/bushslicer/private* $HOME/bushslicer/tierN
+    rm -rf /var/cache/yum /tmp/* "$HOME"/bushslicer/private* "$HOME"/bushslicer/tierN
 
 RUN dbus-uuidgen > /etc/machine-id # e.g. needed for firefox
 RUN chown -R 1001:0 $HOME && chmod -R g+rw $HOME /etc/machine-id
