--- a/tools/openshift-ci/Dockerfile.centos
+++ b/tools/openshift-ci/Dockerfile.centos
@@ -15,13 +15,9 @@ RUN set -x && \
     yum -y update && \
     yum install -y --enablerepo=centosplus $SCL_BASE_PKGS && \
     yum install -y --enablerepo=centosplus $INSTALL_PKGS && \
-    yum install -y https://dl.google.com/linux/direct/google-chrome-stable_current_x86_64.rpm && \
-    CHROMEDRIVER_URL="https://chromedriver.storage.googleapis.com" && \
-    CHROMEDRIVER_VERSION=`curl -sSL "$CHROMEDRIVER_URL/LATEST_RELEASE"` && \
-    curl -sSL "$CHROMEDRIVER_URL/$CHROMEDRIVER_VERSION/chromedriver_linux64.zip"  | bsdtar xvf - -C /usr/local/bin && \
     GECKODRIVER_DOWNLOAD_URL="$(curl -sSL https://api.github.com/repos/mozilla/geckodriver/releases/latest | grep -E 'browser_download_url.*linux64' | sed -E 's/.*(https[^"]*).*/\1/')" && \
     curl -sSL "$GECKODRIVER_DOWNLOAD_URL" | bsdtar -xvf - -C /usr/local/bin && \
-    chmod +x /usr/local/bin/chromedriver /usr/local/bin/geckodriver && \
+    chmod +x /usr/local/bin/geckodriver && \
     rpm -V $INSTALL_PKGS $SCL_BASE_PKGS && \
     curl -sSL https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm -o /tmp/epel-release-latest-7.noarch.rpm && \
     yum install -y /tmp/epel-release-latest-7.noarch.rpm
@@ -31,6 +27,5 @@ RUN scl enable rh-ror50 /bushslicer/tools/hack_bundle.rb
 
 RUN yum install -y http://mirror.centos.org/centos/7/paas/x86_64/openshift-origin/origin-clients-3.10.0-1.el7.git.0.0c4577e.x86_64.rpm
 
-RUN rpm -qa && \
-    yum clean all -y && \
+RUN yum clean all -y && \
     rm -rf /bushslicer /var/cache/yum /tmp/*
