--- a/tools/jenkins/slaves/Dockerfile.rhel7
+++ b/tools/jenkins/slaves/Dockerfile.rhel7
@@ -1,10 +1,9 @@
-# The standard name for this image is aosqe/bushslicer-base
+# The standard name for this image is aosqe/openshift-vtests-public
 
-FROM openshift3/jenkins-slave-base-rhel7
+FROM openshift3/jenkins-slave-base-rhel7:v3.11
 
 LABEL vendor="Red Hat inc."
 LABEL maintainer="AOS QE Team"
-
 
 RUN set -x && \
     yum repolist all && \
@@ -29,19 +28,18 @@ RUN set -x && \
     mkdir -p $HOME/bin
 
 # make sure context dir is at the repo root
-ADD . $HOME/bushslicer
-# RUN scl enable rh-git29 "git clone --depth 1 --single-branch 'https://github.com/openshift/verification-tests.git' '$HOME/bushslicer'"
-RUN scl enable rh-ror50 "$HOME/bushslicer/tools/install_os_deps.sh"
-RUN scl enable rh-ror50 "$HOME/bushslicer/tools/hack_bundle.rb"
+ADD . $HOME/verification-tests
+# RUN scl enable rh-git29 "git clone --depth 1 --single-branch 'https://github.com/openshift/verification-tests.git' '$HOME/verification-tests'"
 
-# -k is a bad option, put certificated under private/config/ca instead
-# be mindful image will be visible if image is made public which is a mild
-#   security concern because of exposing VPN details
+RUN scl enable rh-ror50 "$HOME/verification-tests/tools/install_os_deps.sh"
+RUN scl enable rh-ror50 "$HOME/verification-tests/tools/hack_bundle.rb"
+
+# -k is a bad option, better setup proper system certificates in a layered image
 # RUN sed -i -e 's/^\s\+curl\s/  curl -Sk /' /usr/local/bin/run-jnlp-client
 
 RUN rpm -qa && \
     yum clean all -y && \
-    rm -rf $HOME/bushslicer /var/cache/yum /tmp/*
+    rm -rf $HOME/verification-tests /var/cache/yum /tmp/*
 
 RUN dbus-uuidgen > /etc/machine-id # e.g. needed for firefox
 RUN chown -R 1001:0 $HOME && chmod -R g+rw $HOME /etc/machine-id
