--- a/lib/rules/cli/3.3.yaml
+++ b/lib/rules/cli/3.3.yaml
@@ -159,6 +159,8 @@
     :name: <value>
     :from_file: --from-file=<value>
     :from_literal: --from-literal=<value>
+:create_namespace:
+  :cmd: oc create namespace <name>
 :create_quota:
   :cmd: oc create quota <name>
   :options:
