Update OCP-18796 for 4.x

--- a/lib/rules/cli/4.0.yaml
+++ b/lib/rules/cli/4.0.yaml
@@ -265,6 +265,7 @@
     :l: -l <value>
     :object_name_or_id: <value>
     :object_type: <value>
+    :wait: --wait=<value>
 :deploy:
   :cmd: oc deploy <deployment_config>
   :options:
