No need to create storage class for OCP-10447

--- a/lib/rules/cli/4.0.yaml
+++ b/lib/rules/cli/4.0.yaml
@@ -369,6 +369,7 @@
     :a: --show-all=<value>
     :all_namespaces: --all-namespaces=<value>
     :export: --export=<value>
+    :f: --filename=<value>
     :fieldSelector: --field-selector=<value>
     :L: -L <value>
     :l: -l <value>
