add step for 4.x registry

--- a/lib/rules/cli/3.0.yaml
+++ b/lib/rules/cli/3.0.yaml
@@ -1139,6 +1139,7 @@
   :cmd: oadm prune images
   :options:
     :confirm: --confirm=<value>
+    :ignore_invalid_refs: --ignore-invalid-refs=<value>
     :keep_tag_revisions: --keep-tag-revisions=<value>
     :keep_younger_than: --keep-younger-than=<value>
     :prune_over_size_limit: --prune-over-size-limit=<value>
