--- a/lib/rules/cli/4.0.yaml
+++ b/lib/rules/cli/4.0.yaml
@@ -1248,6 +1248,7 @@
     :prune_over_size_limit: --prune-over-size-limit=<value>
     :registry_url: --registry-url=<value>
     :prune_registry: --prune-registry=<value>
+    :ignore_invalid_refs: --ignore-invalid-refs=<value>
 :oadm_registry:
   :cmd: oc adm registry
   :options:
