--- a/config/config.yaml
+++ b/config/config.yaml
@@ -59,9 +59,9 @@ environments:
     api_port: 443
   origin:
     # hosts: use OPENSHIFT_ENV_ORIGIN_HOSTS=host:role1:...,host2:role1:...
-    hosts_type: SSHAccessibleHost
+    hosts_type: OCDebugAccessibleHost
     # this is the user for remote access to the OpenShift nodes
-    user: fedora
+    user: root
     type: StaticEnvironment
     user_manager: auto
     # set users in OPENSHIFT_ENV_ORIGIN_USER_MANAGER_USERS=user:password,...
@@ -72,9 +72,9 @@ environments:
     api_port: 8443
   ocp4: &ocp4
     # hosts: use OPENSHIFT_ENV_OSE_HOSTS=host:role1:...,host2:role1:...
-    hosts_type: SSHAccessibleHost
+    hosts_type: OCDebugAccessibleHost
     # this is the user for remote access to the OpenShift nodes
-    user: core
+    user: root
     type: StaticEnvironment
     user_manager: auto
     # set users in OPENSHIFT_ENV_OSE_USER_MANAGER_USERS=user:password,...
