--- a/lib/rules/cli/4.0.yaml
+++ b/lib/rules/cli/4.0.yaml
@@ -203,20 +203,22 @@
 :create_secret:
   :cmd: oc create secret <secret_type>
   :options:
-    :name: <value>
+    :cert: --cert=<value>
     :docker_email: --docker-email=<value>
     :docker_password: --docker-password=<value>
     :docker_server: --docker-server=<value>
     :docker_username: --docker-username=<value>
     :dry_run: --dry-run=<value>
-    :from_literal: --from-literal=<value>
     :from_file: --from-file=<value>
+    :from_literal: --from-literal=<value>
     :generator: --generator=<value>
+    :key: --key=<value>
+    :name: <value>
     :output: --output=<value>
     :save_config: --save-config=<value>
+    :template: --template=<value>
     :type: --type=<value>
-    :cert: --cert=<value>
-    :key: --key=<value>
+    :validate: --validate=<value>
 :create_service:
   :cmd: oc create service <createservice_type>
   :options:
