--- a/lib/rules/cli/4.1.yaml
+++ b/lib/rules/cli/4.1.yaml
@@ -141,7 +141,7 @@
     :c: -c=<value>
     :source: <value>
     :dest: <value>
-:create:
+:create: <reource_type> <resouce_name>
   :cmd: oc create
   :options:
     :f: -f <value>
