--- a/lib/rules/cli/4.1.yaml
+++ b/lib/rules/cli/4.1.yaml
@@ -141,8 +141,8 @@
     :c: -c=<value>
     :source: <value>
     :dest: <value>
-:create: 
-  :cmd: oc create <reource_type> <resouce_name>
+:create:
+  :cmd: oc create
   :options:
     :f: -f <value>
     :filename: --filename=<value>
