a hot fix for oc create params

--- a/lib/rules/cli/4.1.yaml
+++ b/lib/rules/cli/4.1.yaml
@@ -142,11 +142,13 @@
     :source: <value>
     :dest: <value>
 :create: 
-  :cmd: oc create <reource_type> <resouce_name>
-  :options:
+  :cmd: oc create 
+  :options: 
     :f: -f <value>
     :filename: --filename=<value>
     :record: --record=<value>
+    :reource_type: <reource_type>
+    :resouce_name: <resouce_name>
 :create_clusterresourcequota:
   :cmd: oc create clusterresourcequota <name>
   :options:
