add option api_version for explain

--- a/lib/rules/cli/4.1.yaml
+++ b/lib/rules/cli/4.1.yaml
@@ -322,6 +322,7 @@
   :cmd: oc explain
   :options:
     :resource: <value>
+    :api_version: --api-version=<value>
 :export:
   :cmd: oc export
   :options:
