--- a/lib/rules/cli/4.1.yaml
+++ b/lib/rules/cli/4.1.yaml
@@ -1188,6 +1188,23 @@
   :options:
     :project: <value>
     :selector: --selector=<value>
+:oadm_policy_add_cluster_role_to_group:
+  :cmd: oc adm policy add-cluster-role-to-group <role_name> <group_name>
+:oadm_policy_add_cluster_role_to_user:
+  :cmd: oc adm policy add-cluster-role-to-user <role_name>
+  :options:
+    :serviceaccount: --serviceaccount=<value>
+    :user_name: <value>
+    :z:  -z <value>
+:oadm_policy_add_role_to_group:
+  :cmd: oc adm policy add-role-to-group <role_name> <group_name>
+  :options:
+    :rolebinding_name: --rolebinding-name=<value>
+:oadm_policy_add_role_to_user:
+  :cmd: oc adm policy add-role-to-user <role_name> <user_name>
+  :options:
+    :role_namespace: --role-namespace=<value>
+    :rolebinding_name: --rolebinding-name=<value>
 :oadm_policy_add_scc_to_group:
   :cmd: oc adm policy add-scc-to-group <scc> <group_name>
 :oadm_policy_add_scc_to_user:
@@ -1204,6 +1221,18 @@
   :options:
     :additive_only: --additive-only=<value>
     :confirm: --confirm
+:oadm_policy_remove_cluster_role_from_group:
+  :cmd: oc adm policy remove-cluster-role-from-group <role_name> <group_name>
+:oadm_policy_remove_cluster_role_from_user:
+  :cmd: oc adm policy remove-cluster-role-from-user <role_name>
+  :options:
+    :serviceaccount: --serviceaccount=<value>
+    :user_name: <value>
+    :z:  -z <value>
+:oadm_policy_remove_role_from_group:
+  :cmd: oc adm policy remove-role-from-group <role_name> <group_name>
+:oadm_policy_remove_role_from_user:
+  :cmd: oc adm policy remove-role-from-user <role_name> <user_name>
 :oadm_policy_remove_scc_from_group:
   :cmd: oc adm policy remove-scc-from-group <scc> <group_name>
 :oadm_policy_remove_scc_from_user:
