add dry-run options for 'oc debug' command

--- a/lib/rules/cli/4.1.yaml
+++ b/lib/rules/cli/4.1.yaml
@@ -255,6 +255,7 @@
      :keep_liveness: --keep-liveness
      :keep_readiness: --keep-readiness
      :node_name: --node-name=<value>
+     :dry_run: --dry-run
      :o: -o <value>
      :oc_opts_end: --
      :one_container: --one-container=<value>
