update login stepdefinition and rule for the OCM testing

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -86,10 +86,10 @@ environments:
     version: 4.1.0.0 # version not supported on cluster (yet)
   ose: *ocp4
   ocm_stage:
-    web_console_url: https://cloud.redhat.com/beta
+    web_console_url: https://cloud.redhat.com/beta/openshift/
     type: OCMEnvironment
   ocm_prod:
-    web_console_url: https://cloud.redhat.com
+    web_console_url: https://cloud.redhat.com/openshift/
     type: OCMEnvironment
 
 optional_classes:
