--- a/config/config.yaml
+++ b/config/config.yaml
@@ -101,9 +101,9 @@ optional_classes:
     class: BushSlicer::TestCaseManager
     opts:
       test_suite_class: BushSlicer::PolarShift::TestSuite
-    st_suite_opts: {}
-      exampleserv
-ices:
+      test_suite_opts: {}
+
+services:
   AWS: &AWSBase
     create_opts:
       # for all options see http://docs.aws.amazon.com/sdkforruby/api/Aws/EC2/Resource.html#create_instances-instance_method
