--- a/config/config.yaml
+++ b/config/config.yaml
@@ -86,11 +86,10 @@ environments:
     version: 4.1.0.0 # version not supported on cluster (yet)
   ose: *ocp4
   ocm_stage:
-    web_console_url: https://cloud.redhat.com/beta
+    web_console_url: https://cloud.redhat.com/example1/
     type: OCMEnvironment
-  ocm_prod:
-    web_console_url: https://cloud.redhat.com
-    type: OCMEnvironment
+    static_users_map:
+      exampleSymbolicUserName: "user1:password1"
 
 optional_classes:
   tcms_tc_manager:
@@ -103,6 +102,7 @@ optional_classes:
     opts:
       test_suite_class: BushSlicer::PolarShift::TestSuite
       test_suite_opts: {}
+
 services:
   AWS: &AWSBase
     create_opts:
