--- a/tools/openshift-ci/Dockerfile.installer-example
+++ b/tools/openshift-ci/Dockerfile.installer-example
@@ -13,4 +13,6 @@ ADD tools/openshift-ci/verification_tests_install_entrypoint.sh /usr/local/bin/
 RUN set -x && \
     yum install -y --setopt=skip_missing_names_on_install=False https://cbs.centos.org/kojifiles/packages/git-crypt/0.6.0/1.el7/x86_64/git-crypt-0.6.0-1.el7.x86_64.rpm
 
+USER 1001
 ENTRYPOINT ["/usr/bin/scl", "enable", "rh-git218", "rh-ruby26", "--", "/usr/local/bin/verification_tests_install_entrypoint.sh"]
+
