--- a/lib/rules/cli/4.4.yaml
+++ b/lib/rules/cli/4.4.yaml
@@ -1298,6 +1298,7 @@
   :options:
     :all: --all=<value>
     :key_val: <value>
+    :l: -l <value>
     :node_name: <value>
     :output: --output <value>
     :overwrite: --overwrite=<value>
