Add option for remote selenium URL
Motivation: I want to run tests in development with browser in one
container but cucushift running outside it / in another container.
Not 100% sure how I'll end using this, but gives flexibility.

Successfully connects to docker.io/selenium/standalone-chrome-debug and
docker.io/selenium/standalone-firefox-debug containers.

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -45,6 +45,10 @@ global:
   # browser: chrome
   # browser: firefox_marionette
 
+  # Optional: remote selenium URL to connect to.
+  # Leave unset for default of launching local browser via geckodriver etc.
+  # selenium_url: http://example.com:4444/wd/hub
+
 environments:
   online_starter:
     hosts: api.starter-us-east-1.openshift.com:etcd:master:node
