OCP-21846 and OCP-25787 (#587)
* OCP-21846

* Corrected opneshift-ovn-kubernetes to openshift-ovn-kubernetes

* OCP-25787

* Shortened the scenario

* More optimisations

* Added OCP-26035 as well

* Added few comments

* Added a CLI rule to support lalel option in oc adm and adjusted scenario

* Comments

* Fixes OCP-23893 as well due to CI automation failure

* Changind ovn pid location in OCP-24787

* Addressed Liang Xia comments

* Changed 30 to 60 seconds poll

* Addressed comments

* Fixed 10-ovn-kubernetes.conf grep

--- a/lib/rules/cli/4.4.yaml
+++ b/lib/rules/cli/4.4.yaml
@@ -1299,6 +1299,7 @@
   :options:
     :all: --all=<value>
     :key_val: <value>
+    :l: -l <value>
     :node_name: <value>
     :output: --output <value>
     :overwrite: --overwrite=<value>
