--- a/lib/rules/cli/4.1.yaml
+++ b/lib/rules/cli/4.1.yaml
@@ -1312,6 +1312,7 @@
   :options:
     :all: --all=<value>
     :key_val: <value>
+    :l: -l <value>
     :node_name: <value>
     :output: --output <value>
     :overwrite: --overwrite=<value>
