add automation scenario for logging upgrading

--- a/testdata/logging/clusterlogging/clusterlogging-storage-template.yaml
+++ b/testdata/logging/clusterlogging/clusterlogging-storage-template.yaml
@@ -16,15 +16,15 @@ objects:
         logStore:
           type: "elasticsearch"
           elasticsearch:
-            nodeCount: 1
+            nodeCount: ${{ES_NODE_COUNT}}
             resources:
               requests:
                 cpu: 100m
                 memory: 1Gi
             storage: 
-              storageClassName: ${STORAGE_CLASS}
-              size: ${PVC_SIZE}
-            redundancyPolicy: "ZeroRedundancy"
+              storageClassName: "${STORAGE_CLASS}"
+              size: "${PVC_SIZE}"
+            redundancyPolicy: "${REDUNDANCY_POLICY}"
         visualization:
           type: "kibana"
           kibana:
@@ -32,7 +32,7 @@ objects:
         curation:
           type: "curator"
           curator:
-            schedule: "*/10 * * * *"
+            schedule: "*/5 * * * *"
         collection:
           logs:
             type: "fluentd"
@@ -40,4 +40,10 @@ objects:
 
 parameters:
   - name: STORAGE_CLASS
+    value: "gp2"
   - name: PVC_SIZE
+    value: "10Gi"
+  - name: ES_NODE_COUNT
+    value: "1"
+  - name: REDUNDANCY_POLICY
+    value: "ZeroRedundancy"
