Fix admin/scc.feature after integrate test data

--- a/testdata/authorization/scc/scc_capabilities.yaml
+++ b/testdata/authorization/scc/scc_capabilities.yaml
@@ -1,6 +1,8 @@
 allowedCapabilities:
 - FSETID
 - KILL
+defaultAddCapabilities: []
+requiredDropCapabilities: []
 runAsUser:
   type: RunAsAny
 seLinuxContext:
