--- a/lib/rules/cli/4.4.yaml
+++ b/lib/rules/cli/4.4.yaml
@@ -186,6 +186,19 @@
     :validate: --validate=<value>
 :create_namespace:
   :cmd: oc create namespace <name>
+:create_poddisruptionbudget:
+  :cmd: oc create poddisruptionbudget <name>
+  :options:
+    :allow_missing_template_keys: --allow-missing-template-keys=<value>
+    :dry_run: --dry-run=<value>
+    :generator: --generator=<value>
+    :max_unavailable: --max-unavailable=<value>
+    :min_available: --min-available=<value>
+    :o: -o <value>
+    :save_config: --save-config=<value>
+    :selector: --selector=<value>
+    :template: --template=<value>
+    :validate: --validate=<value>
 :create_quota:
   :cmd: oc create quota <name>
   :options:
@@ -1137,12 +1150,11 @@
     :type: --type=<value>
     :whitelist: --whitelist=<value>
 :oadm_inspect:
-  :cmd: oc adm inspect
+  :cmd: oc adm inspect <resource_type> <resource_name>
   :options:
+    :A: --all-namespaces=<value>
     :all_namespaces: --all-namespaces=<value>
     :dest_dir: --dest-dir=<value>
-    :resource: <value>
-    :resource_name: <value>
 :oadm_new_project:
   :cmd: oc adm new-project <project_name>
   #:expected:
