--- a/lib/rules/cli/4.4.yaml
+++ b/lib/rules/cli/4.4.yaml
@@ -1150,11 +1150,21 @@
     :type: --type=<value>
     :whitelist: --whitelist=<value>
 :oadm_inspect:
-  :cmd: oc adm inspect <resource_type> <resource_name>
+  :cmd: oc adm inspect
   :options:
     :A: --all-namespaces=<value>
     :all_namespaces: --all-namespaces=<value>
     :dest_dir: --dest-dir=<value>
+    :resource: <value>
+    :resource_name: <value>
+:oadm_must_gather:
+  :cmd: oc adm must-gather
+  :options:
+    :dest_dir: --dest-dir=<value>
+    :image: --image=<value>
+    :image_stream: --image-stream=<value>
+    :node_name: --node-name=<value>
+    :source_dir: --source-dir=<value>
 :oadm_new_project:
   :cmd: oc adm new-project <project_name>
   #:expected:
