--- a/tools/openshift-ci/Dockerfile.centos
+++ b/tools/openshift-ci/Dockerfile.centos
@@ -21,7 +21,7 @@ RUN set -x && \
     GECKODRIVER_DOWNLOAD_URL="$(curl -sSL https://api.github.com/repos/mozilla/geckodriver/releases/latest | jq . | grep -E 'browser_download_url.*linux64' | sed -E 's/.*(https[^"]*).*/\1/')" && \
     curl -sSL "$GECKODRIVER_DOWNLOAD_URL" | bsdtar -xvf - -C /usr/local/bin && \
     chmod +x /usr/local/bin/geckodriver && \
-    rpm -V $INSTALL_PKGS $SCL_BASE_PKGS && \
+    rpm -V $INSTALL_PKGS $SCL_BASE_PKGS
 
 RUN scl enable rh-ruby26 /verification-tests/tools/install_os_deps.sh
 RUN scl enable rh-ruby26 /verification-tests/tools/hack_bundle.rb
