Update ipv6 address

--- a/testdata/networking/multus-cni/NetworkAttachmentDefinitions/IPv6/macvlan-bridge-v6.yaml
+++ b/testdata/networking/multus-cni/NetworkAttachmentDefinitions/IPv6/macvlan-bridge-v6.yaml
@@ -10,8 +10,6 @@ spec:
       "mode": "bridge",
       "ipam": {
         "type": "host-local",
-        "subnet": "fd00::192:168:22:0/112",
-        "rangeStart": "fd00::192:168:22:100",
-        "rangeEnd": "fd00::192:168:22:200"
+        "subnet": "fd00:dead:beef::/64"
       }
     }'
