--- a/lib/rules/cli/4.1.yaml
+++ b/lib/rules/cli/4.1.yaml
@@ -538,7 +538,7 @@
   :options:
     :allow_missing_imagestream_tags: --allow-missing-imagestream-tags=<value>
     :app_repo: <value>
-    :binary: --binary <value>
+    :binary: --binary=<value>
     :build_arg: --build-arg=<value>
     :build_config_map: --build-config-map=<value>
     :build_env: --build-env=<value>
