--- a/testdata/storage/vsphere/storageclass.yml
+++ b/testdata/storage/vsphere/storageclass.yml
@@ -2,8 +2,6 @@ kind: StorageClass
 apiVersion: storage.k8s.io/v1
 metadata:
   name: vsphere
-  annotations:
-    storageclass.kubernetes.io/is-default-class: "true"
 provisioner: kubernetes.io/vsphere-volume
 parameters:
-  datastore: datastore1
+  diskformat: thin
