--- a/lib/rules/cli/4.4.yaml
+++ b/lib/rules/cli/4.4.yaml
@@ -292,6 +292,7 @@
      :exec_command: <value>
      :exec_command_arg: <value>
      :f: -f <value>
+     :image: --image=<value>
      :keep_annotations: --keep-annotations
      :keep_init_containers: --keep-init-containers=<value>
      :keep_liveness: --keep-liveness
