--- a/lib/rules/cli/4.4.yaml
+++ b/lib/rules/cli/4.4.yaml
@@ -1291,6 +1291,8 @@
 :oadm_release_info:
   :cmd: oc adm release info
   :options:
+    :image-for: --image-for=<value>
+    :image_name: <value>    
     :registry_config: --registry-config=<value>
 :oadm_router:
   :cmd: oc adm router <name>
